@@ -73,5 +73,38 @@
 
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <skipTests>false</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <parallel>classes</parallel>
+                    <!--                    <forkMode>perthread</forkMode>-->
+                    <threadCount>2</threadCount>
+                    <!--                    <reuseForks>false</reuseForks>-->
+                    <!--                    <argLine>-Duser.language=en</argLine>-->
+                    <!--                    <argLine>-Xmx1024m</argLine>-->
+                    <!--                    <argLine>-XX:MaxPermSize=256m</argLine>-->
+                    <!--                    <argLine>-Dfile.encoding=UTF-8</argLine>-->
+                    <!--                    <useFile>false</useFile>-->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
